# forth-compiler

./: .clang-format  .editorconfig  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
cmake/: CPM.cmake
forth/: CMakeLists.txt
forth/include/forth/: lexer.hpp  operation.hpp  parser.hpp  source_location.hpp  source_span.hpp  source_text.hpp  stack_type.hpp  token.hpp  token_kind.hpp
forth/source/: lexer.cpp  operation.cpp  parser.cpp  source_span.cpp  source_text.cpp  token.cpp
forthc/: CMakeLists.txt
forthc/source/: main.cpp
